--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">IP_MobileApp</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Vitalis</string>
+    <string name="nav_header_subtitle">contact@vitalis.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Setări</string>
 
